# aws-generated-data

./: .dockerignore  .tool-versions  Dockerfile  Makefile  README.md  pyproject.toml
.tekton/: aws-generated-data-main-pull-request.yaml  aws-generated-data-main-push.yaml  main-pull-request.yaml  main-push.yaml
aws_generated_data/: __main__.py  cli.py  utils.py
aws_generated_data/commands/: msk_eol.py  rds_eol.py
output/: msk_eol.yaml  rds_eol.yaml
tests/: conftest.py  test_msk_eol.py  test_rds_eol.py  test_utils.py
tests/fixtures/: aurora-postgresql-release-calendar.html  mysql-release-calendar.html  postgresql-release-calendar.html  supported-kafka-versions.html
