[tool.poetry]
name = "aws-generated-data"
version = "0.1.0"
description = ""
authors = ["Christian Assing <cassing@redhat.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "aws_generated_data" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
typer = "^0.9.0"
rich = "^13.5.2"
pyyaml = "^6.0.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
html5lib = "^1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.2"
types-pyyaml = "^6.0.12.11"
types-requests = "^2.31.0.2"
types-beautifulsoup4 = "^4.12.0.6"
requests-mock = "^1.11.0"
pytest-mock = "^3.11.1"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agd = 'aws_generated_data.__main__:app'

[tool.mypy]
plugins = "pydantic.mypy"
enable_error_code = "truthy-bool, redundant-expr"
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["pyquery.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = 'py311'
required-version = "0.4.8"
src = ["aws_generated_data", "tests"]
extend-exclude = [".local", ".cache"]
fix = true

[tool.ruff.lint]
preview = true
# defaults are ["E4", "E7", "E9", "F"]
extend-select = [
    # flake8 default rules
    "E1", # preview rule
    "E2", # preview rule
    "W",
    # isort
    "I",
    # pylint
    "PL",
    # pyupgrade
    "UP",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["aws_generated_data"]
