[project]
name = "aws-generated-data"
version = "0.2.0"
requires-python = ">=3.11"
description = ""
readme = "README.md"
authors = [{ name = "Christian Assing", email = "cassing@redhat.com" }]
dependencies = [
    "beautifulsoup4 ~=4.14.2",
    "html5lib ~=1.1",
    "pydantic ~=2.12.0",
    "pyyaml ~=6.0.2",
    "requests ~=2.32.3",
    "rich ~=14.3.2",
    "typer ~=0.24.1",
]

[project.urls]
homepage = "https://github.com/app-sre/aws-generated-data"
repository = "https://github.com/app-sre/aws-generated-data"
documentation = "https://github.com/app-sre/aws-generated-data"

[dependency-groups]
dev = [
    "mypy ~=1.13",
    "pytest ~=9.0.0",
    "pytest-mock ~=3.15.1",
    "requests-mock ~=1.12.1",
    "ruff ~=0.15.0",
    "types-beautifulsoup4 ~=4.12.0",
    "types-pyyaml ~=6.0.12",
    "types-requests ~=2.32.0",
]

[project.scripts]
agd = 'aws_generated_data.__main__:app'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["aws_generated_data"]

[tool.hatch.build.targets.wheel]
only-include = ["aws_generated_data"]

# Ruff configuration
[tool.ruff]
line-length = 88
src = ["aws_generated_data"]
extend-exclude = [
    # exclude some common cache and tmp directories
    ".local",
    ".cache",
    "tmp",
]
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",     # Missing copyright header
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D203",    # 1 blank line required before class docstring
    "D211",    # No blank lines allowed before class docstring
    "D212",    # multi-line-summary-first-line
    "D213",    # multi-line-summary-second-line
    "D4",      # Doc string style
    "E501",    # Line too long
    "G004",    # Logging statement uses f-string
    "PLR0904", # Too many public methods
    "PLR0913", # Too many arguments
    "PLR0917", # Too many positional arguments
    "S101",    # Use of assert detected. Pytest uses assert
    "S404",    # subprocess import
    "EM101",   # Exception must not use a string literal, assign to variable first
    "EM102",   # Exception must not use an f-string literal, assign to variable first
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY300",  # try-consider-else
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["aws_generated_data"]

# Mypy configuration
[tool.mypy]
files = ["aws_generated_data", "tests"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["pyquery.*"]
ignore_missing_imports = true
